# XML-Parser

./: .clang-format  CMakeLists.txt  README  README.md
include/: config.h  data_parser.h  database.h  parseXml.h  server.h
include/config/: config.h  config.hpp
include/database/: database.h  database.hpp
include/parser/: parser.h  parser.hpp  tree.h  tree.hpp
include/socket/: client.h  client.hpp  socket.h  socket.hpp
src/: config.cpp  config.json  data_parser.cpp  database.cpp  main.cpp  parseXml.cpp  server.cpp
src/config/: config.cpp
src/database/: database.cpp
src/parser/: parser.cpp  tree.cpp
src/socket/: client.cpp  socket.cpp
